@@ -140,7 +140,7 @@ Lars Duening thanks:
      Baba@Avalon
      Bastian Hoyer (hoyer@wisc.de, dafire@dafire.de)
      Ben Fennema (bfennema@ix.netcom.com)
-     Bertram Felgenhauer (bf3@irz.inf.uni-dresden.de, Fuchur@Nightfall)
+     Bertram Felgenhauer (bf3@irz.inf.uni-dresden.de, Fuchur@Wunderland)
      Bill Andrulonis (bill.andrulonis@citrix.com, Bofin@Realmsmud)
      Blackcat@PK-Mud (amuelle1@htwm.de)
      Brandon (pothole@darkspyre.quad.net)
@@ -216,7 +216,7 @@ Lars Duening thanks:
      Mike Conley (mpc@sgi.net, Tamarindo@Sovereign)
      mudder@Furtual.ORG
      "Nathan@Unholy Lands" (mud@pc181.iaee.tuwien.ac.at)
-     Neil McBride (Neil.McBride@VervelT.com)
+     Neil McBride (neil@castinian.org)
      Nepomuck@UNItopia
      Nick Derewianka (nickd@e-media.com.au)
      Nico Ehemann (n.ehemann@wzl.rwth-aachen.de)
