@@ -20,6 +20,7 @@
 ;;
 ;;--------------------------------------------------------------------------
 ;;
+;; TODO:  sockets (p-020912, p-021021, f-000814-1, see also Genesis)
 ;; TODO: Fast callouts
 ;; TODO: Configurable heartbeat interval a la MudOS
 ;; TODO: Closure-Callbacks  (like in call_out()s) should throw an error
@@ -38,7 +39,6 @@
 ;; TODO: Like Pike: `operator()s as lfuns. http://caudium.net/developer/pikeref/
 ;; TODO: Investigate MPS (http://www.ravenbrook.com/project/mps/)
 ;; TODO: general coloured efuns
-;; TODO:  sockets (p-020912),
 ;; TODO: use the ITIMER_PROF to detect long executions and print a log
 ;; TODO: state dumps.
 ;; TODO: Syslog
@@ -58,12 +58,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 448)
-(Parent-Version lpmud 3-3 447)
-(Version-Log "Corrected an invalid memory read in int_call_lambda().")
+(Project-Version lpmud 3-3 449)
+(Parent-Version lpmud 3-3 448)
+(Version-Log "Corrected a crasher in the PCRE string replacement code.")
 (New-Version-Log
 "")
-(Checkin-Time "Thu, 24 Apr 2003 00:12:41 -0600")
+(Checkin-Time "Tue, 29 Apr 2003 00:20:42 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -99,8 +99,8 @@
   ;; Information about the driver and the distribution in general
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.10 644))
-  (CREDITS (lpmud/d/22_CREDITS 1.70.1.63 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.511 644))
+  (CREDITS (lpmud/d/22_CREDITS 1.70.1.64 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.512 644))
   (HISTORY (lpmud/f/49_HISTORY 1.321 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -116,7 +116,7 @@
   (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.71 644))
   (src/autoconf/acconfig.h (lpmud/d/10_acconfig.h 1.6.1.6 644))
 
-  (src/settings/README (lpmud/c/22_README 1.14.1.14 644))
+  (src/settings/README (lpmud/c/22_README 1.14.1.15 644))
   (src/settings/default (lpmud/c/23_default 1.13.1.5.1.40 744))
   (src/settings/native (lpmud/c/9_native 1.6 744))
   (src/settings/compat (lpmud/c/10_compat 1.7 744))
@@ -135,6 +135,7 @@
   (src/settings/heaven7 (lpmud/k/22_heaven7 1.5 644))
   (src/settings/hyperborea (lpmud/h/20_hyperborea 1.3 744))
   (src/settings/morgengrauen (lpmud/k/37_morgengrau 1.7 744))
+  ;(src/settings/lethynna (lpmud/d/b/21_lethynna 1.1 744))
   (src/settings/lpmud.net (lpmud/e/b/7_lpmud.net 1.1 744))
   (src/settings/osb (lpmud/c/8_osb 1.19 744))
   (src/settings/pkmud (lpmud/c/25_pkmud 1.5.1.5 744))
@@ -173,7 +174,7 @@
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
   (src/dumpstat.c (lpmud/c/34_dumpstat.c 1.20.1.11.1.8 644))
   (src/ed.h (lpmud/f/34_ed.h 1.5.1.6 644))
-  (src/ed.c (lpmud/c/33_ed.c 1.32.1.28 644))
+  (src/ed.c (lpmud/c/33_ed.c 1.32.1.29 644))
   (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.19.1.3 644))
   (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.74 644))
   (src/exec.h (lpmud/c/32_exec.h 1.34.1.33.1.7 644))
@@ -200,7 +201,7 @@
   (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.8 644))
   (src/mempools.c (lpmud/d/49_mempools.c 1.2.1.12 644))
   (src/mregex.h (lpmud/e/29_rxcache.h 1.7.1.10 644))
-  (src/mregex.c (lpmud/e/30_rxcache.c 1.11.1.27 644))
+  (src/mregex.c (lpmud/e/30_rxcache.c 1.11.1.28 644))
   (src/mstrings.h (lpmud/i/35_mstrings.h 1.21 644))
   (src/mstrings.c (lpmud/i/36_mstrings.c 1.21.1.21 644))
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
@@ -286,7 +287,7 @@
   (src/sysmalloc.h (lpmud/c/b/33_sysmalloc. 1.2 644))
   (src/sysmalloc.c (lpmud/c/b/34_sysmalloc. 1.3 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.4 644))
-  (src/sprintf.c (lpmud/28_sprintf.c 1.31.1.53 644))
+  (src/sprintf.c (lpmud/28_sprintf.c 1.31.1.54 644))
   (src/strfuns.h (lpmud/b/51_strfuns.h 1.11.1.6 644))
   (src/strfuns.c (lpmud/c/0_strfuns.c 1.9.1.15 644))
   (src/svalue.h (lpmud/f/39_datatypes. 1.34.1.23.1.5 644))
@@ -1318,7 +1319,7 @@
   (doc/LPC/closures (lpmud/r/15_closures 1.8 644))
   (doc/LPC/closures-abstract (lpmud/c/50_closures 1.4.1.2 644))
   (doc/LPC/closures-example (lpmud/r/16_closures-e 1.8 644))
-  (doc/LPC/closure_guide (lpmud/r/17_closure_gu 1.7.1.5 644))
+  (doc/LPC/closure_guide (lpmud/r/17_closure_gu 1.7.1.6 644))
   (doc/LPC/comments (lpmud/m/35_comments 1.3 644))
   (doc/LPC/do-while (lpmud/r/18_do-while 1.3 644))
   (doc/LPC/ed0 (lpmud/r/19_ed0 1.2 644))
@@ -1331,7 +1332,7 @@
   (doc/LPC/efuns (lpmud/r/26_efuns 1.3 644))
   (doc/LPC/escape (lpmud/n/9_escape 1.1 644))
   (doc/LPC/for (lpmud/r/27_for 1.6 644))
-  (doc/LPC/foreach (lpmud/e/32_foreach 1.7 644))
+  (doc/LPC/foreach (lpmud/e/32_foreach 1.8 644))
   (doc/LPC/functions (lpmud/r/28_functions 1.10 644))
   (doc/LPC/if (lpmud/h/15_if 1.3 644))
   (doc/LPC/inherit (lpmud/r/29_inherit 1.2 644))
