@@ -26,8 +26,9 @@ The provided settings:
   forgottendreams: settings for ForgottenDreams
   heaven7:         settings for Heaven7
   hyperborea:      settings for Hyperborea
-  morgengrauen:    settings for Morgengrauen
   lethynna:        settings for Lethynna
+  lpmud.net:       settings for lpmud.net's "2.4.6" mudlib
+  morgengrauen:    settings for Morgengrauen
   osb:             settings for OSB
   pkmud:           settings for PkMud
   psycmuve:        settings for PSYC
